// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withFetcher should should show custom FailureComponent if there is an error and it's not hidden 1`] = `
<MockedFailureComponent
  error="Yepp... Error time! Wushhh!"
/>
`;

exports[`withFetcher should should show default Failure if there is an error and it's not hidden 1`] = `
<Translate(Failure)
  error="Yepp... Error time! Wushhh!"
/>
`;

exports[`withFetcher should should show nothing if there is no data yet and spinner is hidden 1`] = `<div />`;

exports[`withFetcher should should show spinner if there is no data yet and it's not hidden 1`] = `
<Spinner
  className="loading"
  fadeIn="full"
  name="line-scale-party"
  noFadeIn={false}
  overrideSpinnerClassName=""
/>
`;

exports[`withFetcher should should show wrapped component if there is data 1`] = `
<WrappedComponent
  endpoint={Object {}}
/>
`;
